<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/calibrate"
        android:layout_width="115dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:text="@string/calibrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log" />

    <Button
        android:id="@+id/gpsFix"
        android:layout_width="115dp"
        android:layout_height="37dp"
        android:layout_marginTop="72dp"
        android:text="@string/fix_gps_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="9dp"
        android:text="@string/gps_fixed_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="98dp"
        android:layout_height="20dp"
        android:layout_marginStart="184dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="224dp"
        android:text="@string/mavlink_file_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mavlinkFile"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:text="@string/calibrateButton"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.743"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log"
        app:layout_constraintVertical_bias="0.179" />

    <TextView
        android:id="@+id/gpsFixedCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/gps_fixed"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/mavlinkFile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log"
        app:layout_constraintVertical_bias="0.888" />

    <TextView
        android:id="@+id/mavlinkFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="224dp"
        android:text="@string/mavlinkfile"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/calibrateCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/calibrate_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/gpsFixedCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log"
        app:layout_constraintVertical_bias="0.724" />

    <Button
        android:id="@+id/runFlightPlan"
        android:layout_width="126dp"
        android:layout_height="53dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="16dp"
        android:text="@string/run_flightplan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeMavfile"
        app:layout_constraintVertical_bias="0.363" />

    <Button
        android:id="@+id/writeMavfile"
        android:layout_width="125dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="16dp"
        android:text="@string/write_mavlink_file_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <Button
        android:id="@+id/stopFlightplan"
        android:layout_width="127dp"
        android:layout_height="58dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/stop_flightplan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeMavfile"
        app:layout_constraintVertical_bias="0.583" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="45dp"
        android:text="@string/mavlink_activity"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/log"
        android:layout_width="293dp"
        android:layout_height="192dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="33dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:text="@string/log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>